--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -1,342 +1,120 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="CollisionManager.cpp">
-      <Filter>Archivos de código</Filter>
-    </ClCompile>
-    <ClCompile Include="Game.cpp">
-      <Filter>Archivos de código</Filter>
-    </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>Archivos de código</Filter>
-    </ClCompile>
-    <ClCompile Include="Money.cpp">
-      <Filter>Archivos de código</Filter>
-    </ClCompile>
-    <ClCompile Include="Arm.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="Bullet.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="Coin.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="Enemy.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="MartyrEnemy.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="MeleeEnemy.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="Player.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="Tile.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="BulletPool.cpp">
-      <Filter>Archivos de código\Pools</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjectPool.cpp">
-      <Filter>Archivos de código\Pools</Filter>
-    </ClCompile>
-    <ClCompile Include="PoolWrapper.cpp">
-      <Filter>Archivos de código\Pools</Filter>
-    </ClCompile>
-    <ClCompile Include="AnimatedSpriteComponent.cpp">
-      <Filter>Archivos de código\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="ArmControllerComponent.cpp">
-      <Filter>Archivos de código\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="BodyComponent.cpp">
-      <Filter>Archivos de código\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="FollowingComponent.cpp">
-      <Filter>Archivos de código\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="FrameComponent.cpp">
-      <Filter>Archivos de código\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="MovingComponent.cpp">
-      <Filter>Archivos de código\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerControllerComponent.cpp">
-      <Filter>Archivos de código\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="TransformComponent.cpp">
-      <Filter>Archivos de código\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="SpriteComponent.cpp">
-      <Filter>Archivos de código\Components\Base Components</Filter>
-    </ClCompile>
-    <ClCompile Include="RenderComponent.cpp">
-      <Filter>Archivos de código\Components\Base Components</Filter>
-    </ClCompile>
-    <ClCompile Include="PhysicsComponent.cpp">
-      <Filter>Archivos de código\Components\Base Components</Filter>
-    </ClCompile>
-    <ClCompile Include="InputComponent.cpp">
-      <Filter>Archivos de código\Components\Base Components</Filter>
-    </ClCompile>
-    <ClCompile Include="AmmoPackage.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayState.cpp">
-      <Filter>Archivos de código\States</Filter>
-    </ClCompile>
-    <ClCompile Include="GameState.cpp">
-      <Filter>Archivos de código\States</Filter>
-    </ClCompile>
-    <ClCompile Include="PauseState.cpp">
-      <Filter>Archivos de código\States</Filter>
-    </ClCompile>
-    <ClCompile Include="MenuState.cpp">
-      <Filter>Archivos de código\States</Filter>
-    </ClCompile>
-    <ClCompile Include="Vector2D.cpp">
-      <Filter>Archivos de código\Utilities</Filter>
-    </ClCompile>
-    <ClCompile Include="TTFclass.cpp">
-      <Filter>Archivos de código\Utilities</Filter>
-    </ClCompile>
-    <ClCompile Include="Layer.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="Camera.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="Collectable.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="Gun.cpp">
-      <Filter>Archivos de código\Guns</Filter>
-    </ClCompile>
-    <ClCompile Include="Shooter.cpp">
-      <Filter>Archivos de código\Guns</Filter>
-    </ClCompile>
-    <ClCompile Include="Texture.cpp">
-      <Filter>Archivos de código\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="DebugDraw.cpp">
-      <Filter>Archivos de código\Utilities</Filter>
-    </ClCompile>
-    <ClCompile Include="GameStateMachine.cpp">
-      <Filter>Archivos de código\States</Filter>
-    </ClCompile>
-    <ClCompile Include="HUD.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="GameComponent.cpp">
-      <Filter>Archivos de código\Objects</Filter>
-    </ClCompile>
+    <ClCompile Include="AmmoPackage.cpp" />
+    <ClCompile Include="AnimatedSpriteComponent.cpp" />
+    <ClCompile Include="BodyComponent.cpp" />
+    <ClCompile Include="Arm.cpp" />
+    <ClCompile Include="ArmControllerComponent.cpp" />
+    <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Coin.cpp" />
+    <ClCompile Include="BulletPool.cpp" />
+    <ClCompile Include="Collectable.cpp" />
+    <ClCompile Include="CollisionManager.cpp" />
+    <ClCompile Include="DebugDraw.cpp" />
+    <ClCompile Include="DistanceStaticEnemy.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="HUD.cpp" />
+    <ClCompile Include="FollowingComponent.cpp" />
+    <ClCompile Include="HurtRenderComponent.cpp" />
+    <ClCompile Include="Life.cpp" />
+    <ClCompile Include="MartyrEnemy.cpp" />
+    <ClCompile Include="MeleeEnemy.cpp" />
+    <ClCompile Include="ObjectPool.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="FrameComponent.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameComponent.cpp" />
+    <ClCompile Include="GameState.cpp" />
+    <ClCompile Include="GameStateMachine.cpp" />
+    <ClCompile Include="Gun.cpp" />
+    <ClCompile Include="InputComponent.cpp" />
+    <ClCompile Include="Layer.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="MenuState.cpp" />
+    <ClCompile Include="MovingComponent.cpp" />
+    <ClCompile Include="PauseState.cpp" />
+    <ClCompile Include="PhysicsComponent.cpp" />
+    <ClCompile Include="PlayerControllerComponent.cpp" />
+    <ClCompile Include="PlayState.cpp" />
+    <ClCompile Include="PoolWrapper.cpp" />
+    <ClCompile Include="RenderComponent.cpp" />
+    <ClCompile Include="Shooter.cpp" />
+    <ClCompile Include="ShooterInterface.cpp" />
+    <ClCompile Include="ShotgunShooter.cpp" />
+    <ClCompile Include="SpriteComponent.cpp" />
+    <ClCompile Include="Money.cpp" />
+    <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Tile.cpp" />
+    <ClCompile Include="TransformComponent.cpp" />
+    <ClCompile Include="TTFclass.cpp" />
+    <ClCompile Include="Vector2D.cpp" />
+    <ClCompile Include="DistanceDynamicEnemy.cpp" />
+    <ClCompile Include="EnemyArm.cpp" />
+    <ClCompile Include="PlayerArm.cpp" />
+    <ClCompile Include="DistanceEnemy.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CollisionManager.h">
-      <Filter>Archivos de encabezado</Filter>
-    </ClInclude>
-    <ClInclude Include="Game.h">
-      <Filter>Archivos de encabezado</Filter>
-    </ClInclude>
-    <ClInclude Include="Money.h">
-      <Filter>Archivos de encabezado</Filter>
-    </ClInclude>
-    <ClInclude Include="Arm.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="Coin.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="Collectable.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="Enemy.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="MartyrEnemy.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="MeleeEnemy.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="Player.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="Tile.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="Bullet.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="BulletPool.h">
-      <Filter>Archivos de encabezado\Pools</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjectPool.h">
-      <Filter>Archivos de encabezado\Pools</Filter>
-    </ClInclude>
-    <ClInclude Include="PoolWrapper.h">
-      <Filter>Archivos de encabezado\Pools</Filter>
-    </ClInclude>
-    <ClInclude Include="AnimatedSpriteComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="ArmControllerComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="BodyComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="FollowingComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="FrameComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="InputComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="MovingComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerControllerComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="TransformComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="Component.h">
-      <Filter>Archivos de encabezado\Components\Base Components</Filter>
-    </ClInclude>
-    <ClInclude Include="SpriteComponent.h">
-      <Filter>Archivos de encabezado\Components\Base Components</Filter>
-    </ClInclude>
-    <ClInclude Include="PhysicsComponent.h">
-      <Filter>Archivos de encabezado\Components\Base Components</Filter>
-    </ClInclude>
-    <ClInclude Include="RenderComponent.h">
-      <Filter>Archivos de encabezado\Components\Base Components</Filter>
-    </ClInclude>
-    <ClInclude Include="GameComponent.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="AmmoPackage.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="MenuState.h">
-      <Filter>Archivos de encabezado\States</Filter>
-    </ClInclude>
-    <ClInclude Include="GameState.h">
-      <Filter>Archivos de encabezado\States</Filter>
-    </ClInclude>
-    <ClInclude Include="PauseState.h">
-      <Filter>Archivos de encabezado\States</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayState.h">
-      <Filter>Archivos de encabezado\States</Filter>
-    </ClInclude>
-    <ClInclude Include="AnyarothError.h">
-      <Filter>Archivos de encabezado\Errors</Filter>
-    </ClInclude>
-    <ClInclude Include="FileFormatError.h">
-      <Filter>Archivos de encabezado\Errors</Filter>
-    </ClInclude>
-    <ClInclude Include="FileNotFoundError.h">
-      <Filter>Archivos de encabezado\Errors</Filter>
-    </ClInclude>
-    <ClInclude Include="Layer.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="Camera.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="SDLError.h">
-      <Filter>Archivos de encabezado\Errors</Filter>
-    </ClInclude>
-    <ClInclude Include="Texture.h">
-      <Filter>Archivos de encabezado\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="TTFclass.h">
-      <Filter>Archivos de encabezado\Utilities</Filter>
-    </ClInclude>
-    <ClInclude Include="Vector2D.h">
-      <Filter>Archivos de encabezado\Utilities</Filter>
-    </ClInclude>
-    <ClInclude Include="checkML.h">
-      <Filter>Archivos de encabezado\Utilities</Filter>
-    </ClInclude>
-    <ClInclude Include="Gun.h">
-      <Filter>Archivos de encabezado\Guns</Filter>
-    </ClInclude>
-    <ClInclude Include="Shooter.h">
-      <Filter>Archivos de encabezado\Guns</Filter>
-    </ClInclude>
-    <ClInclude Include="DebugDraw.h">
-      <Filter>Archivos de encabezado\Utilities</Filter>
-    </ClInclude>
-    <ClInclude Include="GameStateMachine.h">
-      <Filter>Archivos de encabezado\States</Filter>
-    </ClInclude>
-    <ClInclude Include="HUD.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Filter Include="Archivos de encabezado">
-      <UniqueIdentifier>{4b149687-7750-4714-8284-0b154fdb6f8c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de código">
-      <UniqueIdentifier>{9ad0cbd0-3b5d-4aa6-bc27-9c51f7d0c088}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Objects">
-      <UniqueIdentifier>{35c6c0d6-ff14-49d3-a52e-e0011bf09bf2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de código\Objects">
-      <UniqueIdentifier>{272a0a0f-bd47-4943-aa9d-16614606118b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Pools">
-      <UniqueIdentifier>{95d06e66-9ace-4bbb-844f-923a06627b24}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de código\Pools">
-      <UniqueIdentifier>{00654719-5756-4373-86fb-fcecbcdffea9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Components">
-      <UniqueIdentifier>{e21cb26b-faad-42f8-bf39-7769a3cf4386}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Components\Base Components">
-      <UniqueIdentifier>{9d71641f-ce31-46db-8102-3c38aae2d636}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de código\Components">
-      <UniqueIdentifier>{2b3aebe7-958e-411d-8033-3ceb85d1bb21}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de código\Components\Base Components">
-      <UniqueIdentifier>{f5abd0e0-e58b-4ed0-994d-2f0dfdc8fd0f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de código\States">
-      <UniqueIdentifier>{54ff8b93-d0a3-4d6b-9cae-0bc869af92d6}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\States">
-      <UniqueIdentifier>{08afaf8a-e5bc-4e0e-a69c-9edac4e20c0d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Errors">
-      <UniqueIdentifier>{9175d96f-b39d-496d-927a-de48f8845193}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de código\Utilities">
-      <UniqueIdentifier>{029ed8fb-eddc-4d49-a2c8-6109188dba4b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Utilities">
-      <UniqueIdentifier>{8428164e-c336-4145-83c5-d97b49055b10}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Guns">
-      <UniqueIdentifier>{33bcb945-ba73-421f-aeea-63852c7dcea3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de código\Guns">
-      <UniqueIdentifier>{8b321d92-8dfc-45cf-8f1e-52883f5182c7}</UniqueIdentifier>
-    </Filter>
+    <ClInclude Include="AmmoPackage.h" />
+    <ClInclude Include="AnimatedSpriteComponent.h" />
+    <ClInclude Include="AnyarothError.h" />
+    <ClInclude Include="BodyComponent.h" />
+    <ClInclude Include="Arm.h" />
+    <ClInclude Include="ArmControllerComponent.h" />
+    <ClInclude Include="Bullet.h" />
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="BulletPool.h" />
+    <ClInclude Include="checkML.h" />
+    <ClInclude Include="Coin.h" />
+    <ClInclude Include="Collectable.h" />
+    <ClInclude Include="CollisionManager.h" />
+    <ClInclude Include="Component.h" />
+    <ClInclude Include="DebugDraw.h" />
+    <ClInclude Include="DistanceStaticEnemy.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="GunType_def.h" />
+    <ClInclude Include="HUD.h" />
+    <ClInclude Include="FollowingComponent.h" />
+    <ClInclude Include="HurtRenderComponent.h" />
+    <ClInclude Include="Life.h" />
+    <ClInclude Include="MartyrEnemy.h" />
+    <ClInclude Include="MeleeEnemy.h" />
+    <ClInclude Include="ObjectPool.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="FileFormatError.h" />
+    <ClInclude Include="FileNotFoundError.h" />
+    <ClInclude Include="FrameComponent.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="GameComponent.h" />
+    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GameState.h" />
+    <ClInclude Include="GameStateMachine.h" />
+    <ClInclude Include="Gun.h" />
+    <ClInclude Include="InputComponent.h" />
+    <ClInclude Include="Layer.h" />
+    <ClInclude Include="MenuState.h" />
+    <ClInclude Include="MovingComponent.h" />
+    <ClInclude Include="PauseState.h" />
+    <ClInclude Include="PhysicsComponent.h" />
+    <ClInclude Include="PlayerControllerComponent.h" />
+    <ClInclude Include="PlayState.h" />
+    <ClInclude Include="PoolWrapper.h" />
+    <ClInclude Include="RenderComponent.h" />
+    <ClInclude Include="SDLError.h" />
+    <ClInclude Include="Shooter.h" />
+    <ClInclude Include="ShooterInterface.h" />
+    <ClInclude Include="ShotgunShooter.h" />
+    <ClInclude Include="SpriteComponent.h" />
+    <ClInclude Include="Money.h" />
+    <ClInclude Include="Texture.h" />
+    <ClInclude Include="Tile.h" />
+    <ClInclude Include="TransformComponent.h" />
+    <ClInclude Include="TTFclass.h" />
+    <ClInclude Include="Vector2D.h" />
+    <ClInclude Include="DistanceDynamicEnemy.h" />
+    <ClInclude Include="EnemyArm.h" />
+    <ClInclude Include="PlayerArm.h" />
+    <ClInclude Include="DistanceEnemy.h" />
   </ItemGroup>
 </Project>
