El cursor y el giro se actualizan con la cámara indep. del mouse (algunos bugs todavía)
Ahora el brazo necesita un objeto cursor para seguirlo, así me ahorro copiar el código para que el cursor se actualice con la cámara

--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -219,6 +219,7 @@
     </ClCompile>
     <ClCompile Include="ObjectPool.cpp" />
     <ClCompile Include="Cursor.cpp" />
+    <ClCompile Include="ObjectPool.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
